# mac_health

./: .gitignore  .prettierignore  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
.github/workflows/: ci.yml
.husky/: pre-push
src/: App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/monitors/: battery.rs  cpu.rs  disk.rs  mod.rs  ram.rs
src/components/charts/: BarChart.tsx  CircularProgress.tsx  DonutChart.tsx  GaugeChart.tsx  charts.test.tsx  index.ts
src/components/ui/: BackButton.tsx  StatCard.tsx  StatusBadge.tsx  index.ts
src/features/battery/: BatteryDetail.test.tsx  BatteryDetail.tsx  index.ts
src/features/cpu/: CpuDetail.test.tsx  CpuDetail.tsx  index.ts
src/features/dashboard/: Dashboard.tsx
src/features/dashboard/widgets/: BatteryWidget.tsx  CpuWidget.tsx  DiskWidget.tsx  RamWidget.tsx  index.ts
src/features/memory/: MemoryDetail.test.tsx  MemoryDetail.tsx  index.ts
src/features/setup/: SetupWizard.test.tsx  SetupWizard.tsx
src/features/storage/: StorageDetail.test.tsx  StorageDetail.tsx  index.ts
src/hooks/: usePolling.ts
src/lib/: formatters.test.ts  formatters.ts  tauri.test.ts  tauri.ts
src/store/: systemStore.test.ts  systemStore.ts
src/types/: index.ts
