[package]
name = "mac-health"
version = "0.1.0"
description = "A macOS health monitoring application"
authors = ["you"]
edition = "2021"

[lib]
name = "mac_health_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "mac-health"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
