[package]
name = "mac-health"
version = "0.1.0"
description = "A macOS health monitoring application"
authors = ["you"]
edition = "2021"

[lib]
name = "mac_health_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "mac-health"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System Information
sysinfo = { version = "0.33", default-features = false, features = ["apple-app-store", "system", "disk"] }
# Note: Battery info now uses native macOS ioreg command for accuracy

# Async runtime
tokio = { version = "1", features = ["rt", "sync"] }

# Error handling
thiserror = "2"

# Process control (macOS)
nix = { version = "0.29", features = ["signal"] }

# Directories
dirs = "5"

[dev-dependencies]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
